--- a/app/src/main/res/layout/activity_profile_user.xml
+++ b/app/src/main/res/layout/activity_profile_user.xml
@@ -11,10 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:text="Account Info"
+        android:text="Informasi Akun"
         android:textColor="@color/black"
         android:textSize="30dp"
         android:textStyle="bold"
+        android:fontFamily="@font/ralewayregular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -52,28 +53,30 @@
 
             <TextView
                 android:id="@+id/txtNama"
-                android:layout_width="wrap_content"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:text="Nama"
                 android:textColor="@color/white"
                 android:textSize="24dp"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.068"
+                app:layout_constraintHorizontal_bias="0.165"
                 app:layout_constraintStart_toEndOf="@+id/imageProfile"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.235" />
 
             <TextView
                 android:id="@+id/Nama"
-                android:layout_width="wrap_content"
+                android:layout_width="220dp"
                 android:layout_height="wrap_content"
                 android:text="Nama usernya"
                 android:textColor="@color/white"
                 android:textSize="20dp"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.091"
+                app:layout_constraintHorizontal_bias="0.26"
                 app:layout_constraintStart_toEndOf="@+id/imageProfile"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.724" />
@@ -103,28 +106,30 @@
 
             <TextView
                 android:id="@+id/txtEmail"
-                android:layout_width="wrap_content"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:text="Email"
                 android:textColor="@color/white"
                 android:textSize="24dp"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.063"
+                app:layout_constraintHorizontal_bias="0.165"
                 app:layout_constraintStart_toEndOf="@+id/imageEmail"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.235" />
 
             <TextView
                 android:id="@+id/Email"
-                android:layout_width="wrap_content"
+                android:layout_width="220dp"
                 android:layout_height="wrap_content"
                 android:text="Nama emailnya"
                 android:textColor="@color/white"
                 android:textSize="20dp"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.091"
+                app:layout_constraintHorizontal_bias="0.26"
                 app:layout_constraintStart_toEndOf="@+id/imageEmail"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.724" />
@@ -154,28 +159,30 @@
 
             <TextView
                 android:id="@+id/txtPhone"
-                android:layout_width="wrap_content"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:text="Phone Number"
+                android:text="Nomor Telepon"
                 android:textColor="@color/white"
                 android:textSize="24dp"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.115"
+                app:layout_constraintHorizontal_bias="0.165"
                 app:layout_constraintStart_toEndOf="@+id/imagePhone"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.235" />
 
             <TextView
                 android:id="@+id/Phone"
-                android:layout_width="wrap_content"
+                android:layout_width="220dp"
                 android:layout_height="wrap_content"
                 android:text="Nomor hpnya"
                 android:textColor="@color/white"
                 android:textSize="20dp"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.091"
+                app:layout_constraintHorizontal_bias="0.26"
                 app:layout_constraintStart_toEndOf="@+id/imagePhone"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.724" />
@@ -188,7 +195,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="40dp"
             android:backgroundTint="#9AD0EC"
-            android:text="Edit Profile"
+            android:text="Edit Profil"
             android:textColor="@color/black"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
