--- a/app/src/main/res/layout/activity_home_laundry_list.xml
+++ b/app/src/main/res/layout/activity_home_laundry_list.xml
@@ -57,7 +57,7 @@
         android:id="@+id/recyclerLaundry"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="44px"
+        android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
