--- a/app/src/main/res/layout/activity_profile_laundry.xml
+++ b/app/src/main/res/layout/activity_profile_laundry.xml
@@ -53,7 +53,7 @@
                 android:text="Nama"
                 android:textColor="@color/white"
                 android:textSize="20dp"
-                android:textStyle="italic"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.165"
@@ -68,6 +68,7 @@
                 android:text="Nama usernya"
                 android:textColor="@color/white"
                 android:textSize="16dp"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.26"
                 app:layout_constraintStart_toEndOf="@+id/imageProfile"
@@ -101,10 +102,10 @@
                 android:id="@+id/txtPhone"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="No. Telp"
+                android:text="Nomor Telepon"
                 android:textColor="@color/white"
                 android:textSize="20dp"
-                android:textStyle="italic"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.165"
@@ -119,6 +120,7 @@
                 android:text="Nomor hpnya"
                 android:textColor="@color/white"
                 android:textSize="16dp"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.26"
                 app:layout_constraintStart_toEndOf="@+id/imagePhone"
@@ -152,10 +154,10 @@
                 android:id="@+id/txtDesc"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Desc"
+                android:text="Deskripsi"
                 android:textColor="@color/white"
                 android:textSize="20dp"
-                android:textStyle="italic"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.165"
@@ -170,6 +172,7 @@
                 android:text="Descnya"
                 android:textColor="@color/white"
                 android:textSize="16dp"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.26"
                 app:layout_constraintStart_toEndOf="@+id/imageEmail"
@@ -183,7 +186,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="40dp"
             android:backgroundTint="#9AD0EC"
-            android:text="Edit Profile"
+            android:text="Edit Profil"
             android:textColor="@color/black"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
