--- a/app/src/main/res/layout/activity_registrasi.xml
+++ b/app/src/main/res/layout/activity_registrasi.xml
@@ -109,7 +109,7 @@
             android:layout_marginTop="25dp"
             android:background="@drawable/edittextrgsshape"
             android:fontFamily="@font/ralewayregular"
-            android:hint="Full Name"
+            android:hint="Nama Lengkap"
             android:paddingLeft="5dp"
             android:textSize="12dp"
             android:textStyle="italic"
@@ -138,7 +138,7 @@
             android:layout_marginTop="155dp"
             android:background="@drawable/edittextrgsshape"
             android:fontFamily="@font/ralewayregular"
-            android:hint="Phone Number"
+            android:hint="Nomor Telepon"
             android:paddingLeft="5dp"
             android:textSize="12dp"
             android:textStyle="italic"
