--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,10 +19,11 @@
             android:id="@+id/txtNamaUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hi, Alif. \nJangan lupa join live yea"
+            android:text="Hi"
             android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="@color/white"
+            android:fontFamily="@font/ralewayregular"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -31,7 +32,7 @@
             android:id="@+id/constraintLayoutTop"
             android:paddingTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="216dp"
             android:background="@drawable/belakangmain"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -66,8 +67,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
+                android:layout_marginBottom="8dp"
                 android:text="Lihat semua artikel >>"
                 android:textColor="@color/white"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -141,7 +144,8 @@
                             android:text="Cuci Kilat"
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="15dp"/>
+                            android:textSize="15dp"
+                            android:fontFamily="@font/ralewayregular"/>
                     </LinearLayout>
 
                     <LinearLayout
@@ -188,13 +192,14 @@
                             android:text="Pickup Laundry"
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="14dp"/>
+                            android:textSize="14dp"
+                            android:fontFamily="@font/ralewayregular"/>
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="2dp"
                         android:layout_marginBottom="10dp"
                         android:paddingRight="20dp"
                         android:gravity="center"
@@ -232,16 +237,17 @@
                             android:id="@+id/textView3"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Cari Satuan"
+                            android:text="Satuan"
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="15dp"/>
+                            android:textSize="15dp"
+                            android:fontFamily="@font/ralewayregular"/>
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="2dp"
                         android:layout_marginBottom="10dp"
                         android:gravity="center"
                         android:orientation="vertical">
@@ -278,10 +284,11 @@
                             android:id="@+id/textView5"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Cari Kiloan"
+                            android:text="Kiloan"
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="15dp"/>
+                            android:textSize="15dp"
+                            android:fontFamily="@font/ralewayregular"/>
                     </LinearLayout>
 
                 </TableRow>
@@ -308,6 +315,7 @@
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold"
+                android:fontFamily="@font/ralewayregular"
                 android:paddingBottom="10px"
                 android:layout_marginBottom="10px"
                 android:layout_marginLeft="12dp"
@@ -322,6 +330,7 @@
                 android:layout_height="wrap_content"
                 android:text="Lihat semua laundry >>"
                 android:textColor="@color/black"
+                android:fontFamily="@font/ralewayregular"
                 app:layout_constraintBottom_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.95"
