--- a/app/src/main/res/layout/laundrylist_home.xml
+++ b/app/src/main/res/layout/laundrylist_home.xml
@@ -44,6 +44,7 @@
             android:textColor="@color/white"
             android:textSize="18dp"
             android:textStyle="bold"
+            android:fontFamily="@font/ralewayregular"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,6 +57,7 @@
             android:text="DeskripsiLaundry"
             android:textColor="@color/white"
             android:textSize="15dp"
+            android:fontFamily="@font/ralewayregular"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtNamaLaundry" />
     </androidx.constraintlayout.widget.ConstraintLayout>
