--- a/app/src/main/res/layout/listartikel.xml
+++ b/app/src/main/res/layout/listartikel.xml
@@ -4,6 +4,8 @@
     android:layout_height="90dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="28dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
     android:layout_marginTop="6dp"
     app:cardBackgroundColor="#9AD0EC"
     android:id="@+id/artikelLayout">
@@ -44,7 +46,8 @@
             android:text="Judul Artikel"
             android:textColor="@color/white"
             android:textSize="18dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:fontFamily="@font/ralewayregular"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
