--- a/app/src/main/res/layout/popuplogout.xml
+++ b/app/src/main/res/layout/popuplogout.xml
@@ -26,7 +26,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Are you sure you want to sign out?"
+                android:text="Apakah Anda yakin ingin keluar?"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
