--- a/app/src/main/res/layout/transactionlist_user.xml
+++ b/app/src/main/res/layout/transactionlist_user.xml
@@ -5,6 +5,8 @@
     android:layout_height="110dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="24dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
     android:layout_marginTop="6dp"
     app:cardBackgroundColor="#9AD0EC"
     android:id="@+id/parentLayout">
@@ -45,6 +47,7 @@
             android:textColor="@color/white"
             android:textSize="18dp"
             android:textStyle="bold"
+            android:fontFamily="@font/ralewayregular"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,6 +60,7 @@
             android:text="Harga"
             android:textColor="@color/white"
             android:textSize="15dp"
+            android:fontFamily="@font/ralewayregular"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtNamaLaundry" />
 
@@ -70,6 +74,7 @@
             android:textStyle="italic"
             android:textColor="@color/white"
             android:textSize="14dp"
+            android:fontFamily="@font/ralewayregular"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtHarga" />
 
