--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -10,7 +10,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto">
             <item
                 android:id="@+id/itemProfile"
-                android:title="Profile"
+                android:title="Profil"
                 app:showAsAction="never"/>
             <item
                 android:id="@+id/itemLogout"
