--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -24,6 +24,6 @@
         <item
             android:id="@+id/menuAbout"
             android:icon="@drawable/ic_baseline_info_24"
-            android:title="About Us"/>
+            android:title="Tentang Kami"/>
 <!--    </group>-->
 </menu>
